force-app/main/default/objects/vlocity_ps__ChargeMeasurement__c/fields/vlocity_ps__Domain__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>