force-app/main/default/objects/vlocity_ps__ChargeMeasurement__c/fields/vlocity_ps__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__GlobalKey__c</fullName>
    <description>The globally unique identifier of this charge measurement. Used to identify the charge measurement across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique charge measurement identifier can be used.</description>
    <label>Global Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>