force-app/main/default/objects/vlocity_ps__ChargeMeasurement__c/fields/vlocity_ps__Stackable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Stackable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stackable</label>
    <type>Checkbox</type>
</CustomField>