force-app/main/default/objects/vlocity_ps__ChargeMeasurement__c/fields/vlocity_ps__UnitOfMeasureClass__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__UnitOfMeasureClass__c</fullName>
    <label>Unit Of Measure Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>